# lab-iac

./: Makefile  README.md  blog.yaml  budget.yaml  minecraft.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
aws/: .gitignore  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
aws/src/aws_iac/: app.py
aws/src/aws_iac/stacks/: account_budget.py  github_actions_oidc.py  minecraft_server.py
scripts/: build.sh
templates/: global_values.yaml
templates/blog/libs/: tags.lib.yaml
templates/blog/resources/: route53.yaml
templates/budget/: main.yaml  values.yaml
templates/budget/resources/: 00-sns-topic.yaml  01-budget.yaml  01-chatbot.yaml
templates/minecraft/: main.yaml  values.yaml
templates/minecraft/data/: userdata.sh
templates/minecraft/libs/: tags.lib.yaml
templates/minecraft/resources/: 00-network.yaml  01-ec2.yaml  02-route53.yaml
terraform/services/admin-user/environments/prod/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf
terraform/services/admin-user/modules/aws_admin_iam_role/: main.tf  provider.tf  variables.tf
terraform/services/auth0/environments/prod/: backend.tf  main.tf  outputs.tf  saml_metadata.xml
terraform/services/auth0/modules/auth0_logging/: main.tf  moved.tf  provider.tf
terraform/services/auth0/modules/aws_oidc/: main.tf
terraform/services/auth0/modules/aws_saml/: main.tf  outputs.tf  variables.tf
terraform/services/aws-budgets/environments/prod/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf
(+23 files in other folders)
