[tool.poetry]
name = "aws-iac"
version = "0.1.0"
description = ""
authors = ["takamoto <tkfmnkn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.35.0"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
